--- a/.github/workflows/ci-web.yml
+++ b/.github/workflows/ci-web.yml
@@ -26,6 +26,10 @@ jobs:
           - web
           - tests/wdio
         include:
+          - command: tsc
+            project: web
+            extra_setup: |
+              cd sfe/ && npm ci
           - command: lit-analyse
             project: web
             extra_setup: |
