use API client...kinda
Signed-off-by: Jens Langhammer <jens@goauthentik.io>

--- a/web/sfe/package.json
+++ b/web/sfe/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "license": "MIT",
     "dependencies": {
+        "@goauthentik/api": "^2024.6.0-1719577139",
         "base64-js": "^1.5.1",
         "bootstrap": "^4.6.1",
         "jquery": "^3.7.1"
