--- a/web/sfe/package.json
+++ b/web/sfe/package.json
@@ -7,7 +7,9 @@
         "@goauthentik/api": "^2024.6.0-1719577139",
         "base64-js": "^1.5.1",
         "bootstrap": "^4.6.1",
-        "jquery": "^3.7.1"
+        "formdata-polyfill": "^4.0.10",
+        "jquery": "^3.7.1",
+        "weakmap-polyfill": "^2.0.4"
     },
     "scripts": {
         "build": "rollup -c rollup.config.js --bundleConfigAsCjs",
